--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "@testing-library/user-event": "^12.8.1",
     "ace-builds": "^1.4.12",
     "antd": "^4.13.0",
+    "javascript-terminal": "^1.1.1",
     "re-resizable": "^6.9.0",
     "react": "^17.0.1",
     "react-ace": "^9.3.0",
     "react-dom": "^17.0.1",
     "react-json-view": "^1.21.1",
     "react-scripts": "4.0.3",
+    "react-terminal-component": "^1.5.0",
     "styled-components": "^5.2.1",
+    "terminal-in-react": "^4.3.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
