--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "@testing-library/user-event": "^12.8.1",
     "ace-builds": "^1.4.12",
     "antd": "^4.13.0",
+    "console-feed": "^3.2.2",
     "javascript-terminal": "^1.1.1",
-    "node-sass": "^5.0.0",
+    "lodash": "^4.17.21",
     "re-resizable": "^6.9.0",
     "react": "^17.0.1",
     "react-ace": "^9.3.0",
     "react-dom": "^17.0.1",
     "react-json-view": "^1.21.1",
     "react-scripts": "4.0.3",
-    "react-terminal-component": "^1.5.0",
     "styled-components": "^5.2.1",
     "terminal-in-react": "^4.3.1",
     "web-vitals": "^1.1.0"
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "jest-websocket-mock": "^2.2.0",
-    "mock-socket": "^9.0.3"
+    "mock-socket": "^9.0.3",
+    "node-sass": "^5.0.0"
   }
 }
