--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
+    "@stomp/stompjs": "^6.1.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
@@ -18,6 +19,7 @@
     "react-dom": "^17.0.1",
     "react-json-view": "^1.21.1",
     "react-scripts": "4.0.3",
+    "react-stomp": "^5.1.0",
     "styled-components": "^5.2.1",
     "terminal-in-react": "^4.3.1",
     "web-vitals": "^1.1.0"
