--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.1",
     "ace-builds": "^1.4.12",
     "antd": "^4.13.0",
+    "axios": "^0.21.1",
     "console-feed": "^3.2.2",
     "javascript-terminal": "^1.1.1",
     "lodash": "^4.17.21",
