--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "console-feed": "^3.2.2",
     "javascript-terminal": "^1.1.1",
     "lodash": "^4.17.21",
+    "rc-tween-one": "^3.0.0-beta.7",
     "re-resizable": "^6.9.0",
     "react": "^17.0.1",
     "react-ace": "^9.3.0",
