--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-json-view": "^1.21.1",
     "react-scripts": "4.0.3",
     "react-stomp": "^5.1.0",
+    "scroll-into-view-if-needed": "^2.2.28",
     "styled-components": "^5.2.1",
     "terminal-in-react": "^4.3.1",
     "web-vitals": "^1.1.0"
