--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "lodash": "^4.17.21",
     "rc-tween-one": "^3.0.0-beta.7",
     "re-resizable": "^6.9.0",
-    "react": "^17.0.1",
-    "react-ace": "^9.3.0",
+    "react": "^16.9.0",
+    "react-ace": "^9.5.0",
     "react-animated-list": "^0.1.4",
-    "react-dom": "^17.0.1",
-    "react-json-view": "^1.21.1",
-    "react-scripts": "4.0.3",
+    "react-dom": "^16.0.2",
+    "react-json-view": "^1.21.3",
+    "react-scripts": "^5.0.0",
     "react-stomp": "^5.1.0",
-    "scroll-into-view-if-needed": "^2.2.28",
-    "styled-components": "^5.2.1",
+    "scroll-into-view-if-needed": "^2.2.29",
+    "styled-components": "^5.3.3",
     "terminal-in-react": "^4.3.1",
     "web-vitals": "^1.1.0"
   },
